# multi-agent-test-runner

./: .env.example  .gitignore  AGENTS.md  pyproject.toml
.devcontainer/: .zshrc  Dockerfile
registry/: catalog.example.json  catalog.json
src/test_runner/: __init__.py  __main__.py  catalog.py  catalog_arguments.py  cli.py  config.py  state.py
tests/: test_agent_state_store.py  test_ai_fix_generation.py  test_approval_gate.py  test_autonomy_engine.py  test_budget_enforcement.py  test_catalog.py  test_catalog_arguments.py  test_cli.py  test_cli_streaming.py  test_command_translator.py  test_confidence_decision.py  test_confidence_execution_signals.py  test_confidence_model.py  test_confidence_signal.py  test_confidence_tracker.py  test_config.py  test_decision_engine.py  test_diagnostic_loop.py  test_diagnostic_step_guard.py  test_discovery_agent.py  test_discovery_integration.py  test_discovery_tools.py  test_events.py  test_execution_attempts.py  test_execution_targets.py  test_failure_analysis.py  test_final_summary_formatter.py  test_fix_executor.py  test_fix_generator.py  test_hard_cap_escalation.py  test_intent_service.py  test_invocation_confidence.py  test_jest_adapter.py  test_llm_confidence.py  test_orchestrator_delegation_wiring.py  test_orchestrator_rollup.py  test_parser.py  test_progress.py  test_pytest_adapter.py  test_remote_ci.py  (+12 more)
wiki/: index.md  invariants.md  log.md  open-issues.md  overview.md
wiki/architecture/: agents.md  autonomy.md  catalog.md  cli.md  execution.md  intent-parsing.md  models-and-events.md  orchestrator.md  overview.md  (+1 more)
(+68 files in other folders)
