[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-test-runner"
version = "0.1.0"
description = "Multi-agent test runner using OpenAI Agents SDK with Dataiku LLM Mesh"
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.0.5",
    "openai>=1.30.0",
    "paramiko>=3.5.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
test-runner = "test_runner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
